<resources>
    <string name="app_name">娱乐宝</string>

    <!--视频界面-->
    <string-array name="tab_titles">
        <item>看新闻</item>
        <item>看剧集</item>
        <item>玩游戏</item>
    </string-array>
    <!--视频界面-->
    <string name="action_settings">Settings</string>
    <!--设置页面-->

    <string name="no_result">对不起，没有搜索到相关数据！</string>


    <!-- 听写 -->
    <string name="app_id">58087ef2</string>
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="pref_title_iat_dwa">结果动态修正</string>

    <!-- 合成 -->
    <string-array name="engine_entries">
        <item>本地合成</item>
        <item>在线合成</item>
    </string-array>
    <string-array name="engine_values">
        <item>local</item>
        <item>cloud</item>
    </string-array>
    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>小宇—男青、中英、普通话</item>
        <item>凯瑟琳—女青、英</item>
        <item>亨利—男青、英</item>
        <item>玛丽—女青、英</item>
        <item>小研—女青、中英、普通话</item>
        <item>小琪—女青、中英、普通话</item>
        <item>小峰—男青、中英、普通话</item>
        <item>小梅—女青、中英、粤语</item>
        <item>小莉—女青、中英、台湾普通话</item>
        <item>小蓉—女青、中、四川话</item>
        <item>小芸—女青、中、东北话</item>
        <item>小坤—男青、中、河南话</item>
        <item>小强—男青、中、湖南话</item>
        <item>小莹—女青、中、陕西话</item>
        <item>小新—男童、中、普通话</item>
        <item>楠楠—女童、中、普通话</item>
        <item>老孙—男老、中、普通话</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
    <string-array name="emot_entries">
        <item>正常</item>
        <item>高兴</item>
        <item>悲伤</item>
        <item>生气</item>
    </string-array>
    <string-array name="emot_values">
        <item>neutral</item>
        <item>happy</item>
        <item>sad</item>
        <item>angry</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <!-- 语言 -->
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>河南话</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>henanese</item>
        <item>en_us</item>
    </string-array>
    <!-- 标点符号 -->
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="dwa_entries">
        <item>开启</item>
        <item>关闭</item>
    </string-array>
    <string name="setting">设置</string>
    <string name="voice_create">语音合成</string>
    <string name="voice_lis_wri">语音听写</string>
    <string name="lwfailed_code">"听写失败,错误码:"</string>
    <string name="lw_stop">停止听写</string>
    <string name="lw_start_say">开始说话</string>
    <string name="lw_fail_code">听写失败,错误码:</string>
    <string name="lw_start_fail_code">初始化失败，错误码:</string>
    <string name="lw_end">结束说话</string>
    <string name="lw_voice_size">当前正在说话，音量大小:</string>
    <string name="lw_alarmclock">闹钟</string>
    <string name="lw_call">拨打电话</string>
    <string name="lw_search">浏览器</string>
    <string name="lw_set_alarmclock">是否前往闹钟页面?</string>
    <string name="lw_set_call">是否前往拨号页面?</string>
    <string name="lw_set_search">是否前往浏览器页面?</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="cancel">取消</string>
    <string name="vc_fail_code">语音合成失败,错误码: </string>
    <string name="vc_voicer">在线合成发音人选项</string>
    <string name="vc_start">开始播放</string>
    <string name="vc_zanting">暂停播放</string>
    <string name="vc_continue">继续播放</string>
    <string name="vc_finish">播放完成</string>
    <string name="scan_none_img">无图片</string>
    <string name="scan_save_finish">保存完毕</string>
    <string name="scan_title">二维码的生成与扫描</string>
    <string name="xml_lw_radio_name">听写类型</string>
    <string name="xml_lw_radio_first_btn">云端</string>
    <string name="xml_lw_radio_second_btn">本地</string>
    <string name="xml_lw_start">开始</string>
    <string name="xml_lw_stop">停止</string>
    <string name="xml_lw_cancel">取消</string>
    <string name="xml_lw_et">输入Url,生成二维码</string>
    <string name="xml_tts_text">点击下方空白处输入您要合成语音的文字      ↓↓↓↓</string>
    <string name="xml_tts_et">点我</string>
    <string name="xml_tts_first_rb">在线合成</string>
    <string name="xml_tts_second_rb">本地合成</string>
    <string name="xml_tts_voicer">发言人</string>
    <string name="lw_toast_call">例如:给XXX打电话</string>
    <string name="lw_toast_send">例如:给XXX发短信说XXX</string>
    <string name="lw_toast_alarm">例如:定闹钟</string>
    <string name="lw_toast_search">例如:搜索XXX</string>
    <string name="lw_dialog_yn">是否给</string>
    <string name="lw_dialog_call">打电话?</string>
    <string name="lw_if_search">搜索</string>
    <string name="lw_if_find">找</string>
    <string name="lw_sms_give">给</string>
    <string name="lw_sms_send_sms_say">发短信说</string>
    <string name="lw_call_call">打电话</string>
    <string name="lw_sma_send_sms">发短信</string>
    <string name="lw_say">说</string>
    <string name="lw_send">发</string>
    <string name="lw_title">语音助手</string>
    <string name="lw_da">打</string>

    <!--设置页面-->

    <!--视频界面-->
    <!--网易视频界面-->
    <string name="dlna_device_title">"%s"正在播放中</string>
    <!--网易视频界面-->
    <!--视频界面-->


    <!--剧集视频-->
    <string name="fenji">分集</string>
    <string name="zhoubian">周边</string>
    <string name="jianjie">简介</string>
    <string name="yuanzhu">原著</string>
    <string name="cartoon">漫画</string>
    <string name="jj_yuanzhu">原著:</string>
    <string name="jj_author">作者:</string>
    <string name="jj_jiqing">剧情:</string>
    <string name="jj_bg">背景:</string>
    <string name="zhuiju">+追剧</string>

    <string name="netIsNotGood">网络不给力</string>


    <!--快手界面-->
    <string name="quickhead">快手</string>
    <string name="vedio_info">视频详情</string>
    <string name="map">地图</string>
    <string name="chart">图形绘制</string>
    <string name="chart_line">折线图</string>
    <string name="chart_line_change">温度变化</string>
    <string name="chart_line_beijing">北京</string>
    <string name="chart_line_shenyang">沈阳</string>
    <string name="chart_line_shanghai">上海</string>
    <string name="chart_line_wenzhou">温州</string>
    <string name="chart_line_chongqing">重庆</string>
    <string name="chart_line_qingdao">青岛</string>
    <string name="chart_zhu">柱状图</string>
    <string name="chart_yuan">扇形图</string>
    <string name="chart_dangqian">当前数值</string>
    <string name="save">我的收藏</string>
    <string name="save_success">收藏成功</string>
    <string name="save_fail">取消收藏</string>

    <!--剧集界面抽取的文字-->
    <string name="collection_toast">收藏成功</string>
    <string name="no_collection_toast">取消收藏</string>
    <string name="epi_zhuiju">追剧成功</string>
    <string name="epi_no_zhuiju">取消追剧</string>

    <string name="my_view_shs">守护神</string>

    <string name="title_content">
        一场豪赌, 季子默剃光了为喜欢的人留了十年的长发. 一夜宿醉, 醒来之后, 眼前摆了一张红艳艳的结婚证!
    </string>

    <string name="daoxu">倒序</string>
    <string name="zhengxu">正序</string>


    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="title_activity_rotate">RotateActivity</string>
    <string name="title_activity_newton_cradle">NewtonCradleActivity</string>


    <!--登录页面-->
    <string name="login_login">登录</string>
    <string name="login_name_psw_p">请输入用户名和密码</string>
    <string name="login_name_p">请输入用户名</string>
    <string name="login_psw_p">请输入密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_error_psw">密码错误</string>
    <string name="login_erroe_name">用户名错误</string>

    <!--注册页面-->
    <string name="register_register">注册</string>
    <string name="register_phone_ed">该手机号码已注册</string>
    <string name="register_name_p">请输入昵称</string>
    <string name="register_name_again">用户名重复,请重新输入</string>
    <string name="register_phone_dis_p">两次输入的密码不一致,请重新输入</string>
    <string name="register_error_phine">手机号码错误</string>
    <string name="register_send_msg">发送短信</string>
    <string name="register_send_phone">我们将把验证码发送到以下号码:</string>
    <string name="register_get_code">获取验证码</string>
    <string name="reister_yanzheng_sus">验证成功</string>
    <string name="register_code_sended">验证码已经发送</string>

    <!--生成二维码-->
    <string name="create_code">生成二维码</string>
    <string name="create_save_img">保存二维码图片</string>

    <string name="login_or_not">是否登录?</string>
    <string name="logout_or_not">是否退出登录?</string>
    <string name="clear_cache_scs">清除缓存成功</string>

    <string name="news_rb">新闻看</string>
    <string name="epi_rb">剧集看</string>
    <string name="play_rb">玩玩看</string>
</resources>
